2007-11-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* doc/install.texi (Prerequisites): Add openSUSE.

2007-11-20  David Kastrup  <dak@gnu.org>

	* doc/install.texi (Prerequisites): Update to reflect current
	realities.

2007-11-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* tex-buf.el (TeX-record-buffer): New variable, only in Emacs.
	(TeX-pop-to-buffer): New function.
	(TeX-recenter-output-buffer, TeX-background-filter)
	(TeX-parse-TeX, TeX-parse-error, TeX-help-error): Use
	`TeX-pop-to-buffer'.

2007-10-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* toolbar-x.el (toolbarx-find-image): Rename argument.  Improve
	doc string.

2007-10-11  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (TeX-arg-verb): Honor active region.

2007-10-10  Ralf Angeli  <angeli@caeruleus.net>

	* style/MinionPro.el ("MinionPro"): Run style hook for amsmath
	which is loaded via MnSymbol.

2007-10-09  Ralf Angeli  <angeli@caeruleus.net>

	* style/nomencl.el: New file.

	* Makefile.in (STYLESRC): Add style/nomencl.el.

2007-10-03  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-user-keyword-classes): Doc fix.

2007-08-26  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-command-with-args-default-spec):
	Default to nil.

2007-08-24  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-match-command-with-arguments): Show
	error indicator only in LaTeX mode.

2007-08-23  Ralf Angeli  <angeli@caeruleus.net>

	* style/nicefrac.el ("nicefrac"): Fix last change.

2007-08-22  Ralf Angeli  <angeli@caeruleus.net>

	* style/jurabib.el ("jurabib"): Use `font-latex-add-keywords'.
	Add syntax information.

2007-08-21  Ralf Angeli  <angeli@caeruleus.net>

	* style/scrreprt.el: Add licence text.
	("scrreprt"): Use `font-latex-add-keywords'.  Add syntax
	information.

	* style/scrpage2.el: Add licence text.
	("scrpage2"): Use `font-latex-add-keywords'.  Add syntax
	information.

	* style/scrlttr2.el: Add licence text.